Fixed bug where some articles on the front page would take up the height of two, causing the next to be misaligned.

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -476,6 +476,10 @@ span.minus {
     padding: 0;
 }
 
+.tutorial_box li.first {
+    clear: left;
+}
+
 .tutorial_box li:hover {
     background: url('images/tutorial_box_bg.png') no-repeat;
 }
